# palate

./: .gitignore  .yamllint.yaml  AGENTS.md  Cargo.toml  LICENSE  README.md  hk.pkl  languages.yml  mise.toml
.github/actions/setup-env/: action.yaml
crates/palate_polyglot_tokenizer/: Cargo.toml
crates/palate_polyglot_tokenizer/src/: lib.rs  main.rs  tokenizer.rs
examples/: test_helix_integration.rs
fixtures/: languages.toml
samples/Apex/: TwilioAPI.cls
scripts/: analyze-detect-precedence.ts  codegen.ts  compare-tft-detect.ts  convert-neovim-to-rust.ts  merge-grammars.ts  merge-helix-data.ts  tft-only-patterns.ts
src/: lib.rs  list.rs
src/codegen/: disambiguation-heuristics-map.rs
src/detect/: classifier.rs  file_extension.rs  filename.rs  heuristics.rs  mod.rs  path_suffix.rs  pattern.rs  shebang.rs  stream.rs
tests/: filetype_from_str_smoke.rs  samples_accuracy.rs
